# baggins

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_WALKTHROUGH.md  CONSTITUTION.md  Cargo.toml  GEMINI.md  INSTRUCTIONS.md  POLICY.md  README.md  USER_GUIDE.md  flake.nix  justfile
.keel/: README.md
.keel/adrs/VFTJi1N2S/: README.md
.keel/bearings/VFSyOFTYG/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VFSyOIPZQ/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VFSyOLOaZ/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/epics/VFSyOFTYG/: PRD.md  README.md
.keel/epics/VFSyOIPZQ/: PRD.md  README.md
.keel/epics/VFSyOLOaZ/: PRD.md  README.md
.keel/epics/VFT67Ot1y/: PRD.md  README.md
.keel/epics/VFT67jg2t/: PRD.md  README.md
.keel/epics/VFT67jt2u/: PRD.md  README.md
.keel/epics/VFT869hXY/: PRD.md  README.md
.keel/epics/VFT86RtYc/: PRD.md  README.md
.keel/epics/VFT86SGYZ/: PRD.md  README.md
.keel/epics/VFTDJfTfN/: PRD.md  README.md
.keel/epics/VFTDJfofO/: PRD.md  README.md
.keel/epics/VFTDMW0m2/: PRD.md  README.md
.keel/epics/VFTMxV7Mr/: PRD.md  README.md
.keel/epics/VFTR11pG0/: PRD.md  README.md
.keel/epics/VFTWOTc7c/: PRD.md  README.md
e2e/: package.json  playwright.config.js  run-e2e.sh
e2e/tests/: biller.spec.js  payer.spec.js
interfaces/: README.md
interfaces/biller/: index.html  package.json  vite.config.js
interfaces/biller/src/: App.jsx  (+1 more)
interfaces/payer/: index.html  package.json  vite.config.js
src/: extraction.rs  handoff.rs  lib.rs  models.rs  server.rs  validation.rs
(+158 files in other folders)
