[package]
name = "baggins"
version = "0.1.0"
edition = "2021"

[lib]
name = "baggins"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
