[package]
name = "baggins"
version = "0.1.0"
edition = "2021"

[lib]
name = "baggins"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
